http://winmerge.org/tracker/[tracker-id]

WinMerge 2.10.2
  Change download URL to current URL (#2136765)
  BugFix: Case-sensitive regexp search didn't work (#1991259)
  BugFix: Wrong cursor position when disabling selection margin (#2138555)
  BugFix: Showed a black line when disabling selection margin (#2068790)
  BugFix: Fix manual URL in Readme.txt (#2181628)
  New translation: Galician (#2120685)
  Translation updates:
  - Ukrainian (#2131753)

WinMerge 2.10 - 2008-09-17 (r5967)
  Change Manual url to http://winmerge.org/docs/manual/ (r5957)
  Manual updates
  Changelog update (#2114998)
  BugFix: Customized colors weren't used in some areas (#2110218)
  BugFix: Zip files were extracted into wrong folder (#2110350)

WinMerge 2.10 RC - 2008-09-09 (r5933)
  Add icon for "Plugins->List" menu item (#2060771)
  Use external editor to edit file filters (#2082774)
  Improved command line handling (#2081779)
  Release notes update(#2099303)
  Plugins: Show processing instructions in XML plugin (#1979321)
  BugFix: Didn't select word-diff cyclically by pressing F4 key (#1989858)
  BugFix: Crash when generating a folder comparison report (#2008581)
  BugFix: Table of Contents in manual (#2071625)
  BugFix: ClearCase checkout/commit dialog translation error (#2051069)
  BugFix: Highlight ShowUnInstDetails keyword for NSIS files (#2084879)
  BugFix: Could not reset EOL ignore after selecting it from query
   dialog (#2056741)
  BugFix: Displayed a blank time when file last modified time is 00:00:00
   (#2098626)
  Translation updates:
  - Brazilian (#2059836)
  - German (#2045666)
  - Greek (#2062442)
  - Japanese (r5804)
  - Russian (#2067785)
  - Swedish (#2062107)

WinMerge 2.9.10 - 2008-08-14 (r5804)
  Manual: Introduction update (#2011365)
  Manual: Reorganize structure (#2011924)
  Add ShellExtension menu for drive letters (root folders) (#2011602)
  Remove buildall.bat (#2013576)
  New option to enable plugins (disabled by default) (#2013845)